# FunctionMap-Benchmark

./: CMakeLists.txt  CMakePresets.json  FunctionMap-Benchmark.cpp  README.md  compare.sh  run.sh
cmake/: base.cmake
cmake/detail/: link_statically_to_lib.cmake  select_gcc_runtime.cmake  select_msvc_runtime.cmake  target_destination.cmake
